update for reproduce

--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "reproduces-cookie-delete",
+  "name": "reproduce-cookie-delete",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --experimental-https",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -11,6 +11,6 @@
   "dependencies": {
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.3"
+    "next": "14.3.0-canary.58"
   }
 }
